terraform-eks-3/scripts/nginx.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  # namespace: default
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      # securityContext:
      #   fsGroup: 2000
      #   runAsUser: 1000
      #   runAsNonRoot: true

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - port: 80
    targetPort: 80 # Pod port
  selector:
    app: nginx
