terraform-eks-3/scripts/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  # namespace: default
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
